2008-04-24  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

Reviewed by Oliver.

        Bug 18717: SQUIRRELFISH: eval returns the wrong value for a variable declaration statement
        <https://bugs.webkit.org/show_bug.cgi?id=18717>

        Fixes a regression test, but exposes the failure of another due to the
        lack of getters and setters.

        * kjs/nodes.cpp:
        (KJS::ConstDeclNode::emitCodeSingle):
        (KJS::ConstDeclNode::emitCode):
        (KJS::ConstStatementNode::emitCode):
        (KJS::VarStatementNode::emitCode):
        * kjs/nodes.h:



git-svn-id: http://svn.webkit.org/repository/webkit/branches/squirrelfish@32521 268f45cc-cd09-0410-ab3c-d52691b4dbfc